--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+---- 0.0.4
+Total gui revamp using Qt Designer instead of direct code
+Turned stats display into table
+Changed Start/Stop to single toggled button
+Added gettext-based translation
+removed herobrine
+
 ---- 0.0.3
 
 created changelog
@@ -6,6 +13,8 @@ added call to stop_ping when start_ping was run
 added icon
 greatly improved windows packaging system
 added text coloration to indicate tab ping status
-removed herobrine
 expanded README
+added herobrine
+
+
 
